--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -35,7 +35,7 @@
       display: none;
   }
   
-@media screen and (max-width: 1000px) { 
+@media only screen and (max-width: 1000px) { 
     .header .header-right {
       float: none;
       text-align: left;
