Meeetup card design

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -1,6 +1,6 @@
 .hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./assets/img/bg2.jpg");
+    url("https://res.cloudinary.com/dz4wtphvf/image/upload/v1558108337/bg2_ogsgaw.jpg");
   height: 500px;
   background-size: cover;
   background-position: center;
