--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -6,6 +6,17 @@
   width: 25%;
   margin-left: 85px;
   margin-bottom: 35px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+}
+
+.card h3 {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+span {
+  margin-left: 150px;
 }
 
 @media only screen and (max-width: 1000px) {
