--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -20,11 +20,11 @@
 }
 
 .card-link {
-  color: #01b0fe;
+  color: #6c757d;
 }
 
 .card-link:hover {
-  color: #8e9ea9;
+  color: #01b0fe;
 }
 
 @media only screen and (max-width: 1000px) {
