implement logout functionality

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -42,6 +42,10 @@
   .header .icon {
       display: none;
   }
+
+  .index-link {
+    
+  }
   
 @media only screen and (max-width: 1000px) { 
     .header .header-right {
